fix(sheet): adjust spacing

--- a/packages/components/src/components/notice/bal-sheet/bal-sheet.scss
+++ b/packages/components/src/components/notice/bal-sheet/bal-sheet.scss
@@ -14,8 +14,8 @@ bal-sheet {
   > div.container {
     background-color: $blue-0;
     box-shadow: $shadow;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
 
   @include tablet() {
@@ -28,8 +28,7 @@ bal-sheet {
       > div.inner {
         background-color: $blue-0;
         box-shadow: $shadow;
-        padding-left: 32px;
-        padding-right: 32px;
+        padding: 12px 16px;
       }
     }
   }
